--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-select-list": "^2.0.4",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
